@@ -9,12 +9,12 @@ seahorse 0.7.0
 	* Key Manager shows user IDs instead of subkeys
 	* Sort keys by user ID & validity in Key Manager and Recipients
 	* Subkeys hidden by default in properties
-	* More complete help manual
 
 seahorse 0.6.2
 --------------
 	* Bug fix in GPGME check
 	* Supported languages: cs, de, es, hu, ja, nl, no, sv, tr
+	* Interface fixups so buttons are not sensitive when they cannot be used
 
 seahorse 0.6.1
 --------------
