@@ -2,7 +2,8 @@
 
 	* pixmaps/Makefile.am: Only install pixmaps to $(data_dir)/pixmaps
 	* seahorse-widget: Set window icon to seahorse.png
-	* seahorse-key-manager: Change path for seahorse.png in about dialog
+	* seahorse-key-manager: Change path for seahorse.png in about dialog,
+	add ::selection_changed to desensitize key options if none selected
 	* src/seahorse-file-manager.glade2:
 	* src/seahorse-key-manager.glade2:
 	* src/seahorse-key-properties.glade2:
